--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -23,6 +23,9 @@
                         <li class="texto_menu"><a href="../html/productos.html">Productos</a></li>
                         <li class="texto_menu"><a href="../html/contactanos.html">Contactános</a></li>
                         <li class="texto_menu"><a href="#" class="select">Nosotros</a></li>
+                        <div class="modo" id="modo">
+                            <i class="fas fa-toggle-on"></i>
+                        </div>
                     </ul>
                 </nav>
                 <div class="btn__menu" id="btn_menu">
@@ -116,5 +119,6 @@
     </footer>
 
     <script src="../js/script.js"></script>
+    <script src="../js/dark.js"></script>
 </body>
 </html>
