actuaizacion de la pagina

--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -40,7 +40,7 @@
             <div class="container-cover">
                 <div class="blog-post">
                     <div class="blog-post-img">
-                        <img src="../images/PNG/Nosotros/value.png" alt="">
+                        <img src="../images/PNG/Nosotros/quienes somos.png" alt="">
                     </div>
                     <div class="blog-post__info">
                         <div class="blog-post__date">
@@ -71,7 +71,7 @@
 
                 <div class="blog-post">
                     <div class="blog-post-img">
-                        <img src="../images/PNG/Nosotros/vision-de-la-empresa.png" alt="">
+                        <img src="../images/PNG/Nosotros/vision.png" alt="">
                     </div>
                     <div class="blog-post__info">
                         <div class="blog-post__date">
