--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                           <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
                         </div>
                         
-                        <div class="carousel-inner container__carrusel">
+                        <div class="carousel-inner carousel-fade container__carrusel">
                           <div class="carousel-item active">
                             <img src="images/JPG/slider-1.jpg" alt="" class="d-block m-auto">
                           </div>
@@ -76,7 +76,7 @@
                         <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
                           <span class="carousel-control-next-icon"></span>
                         </button>
-                      </div>
+                    </div>
                 </div>
             </div>
         </div>
